@@ -1,5 +1,14 @@
 2009-11-10  Oliver Hunt  <oliver@apple.com>
 
+        Hopefully the last one.  Why aren't these autogenerated?
+
+        * bindings/v8/V8DOMWrapper.cpp:
+        (WebCore::V8DOMWrapper::setIndexedPropertiesToExternalArray):
+        (WebCore::V8DOMWrapper::getTemplate):
+        (WebCore::V8DOMWrapper::convertToV8Object):
+
+2009-11-10  Oliver Hunt  <oliver@apple.com>
+
         Another chrome build fix.
 
         * bindings/v8/custom/V8HTMLCanvasElementCustom.cpp:
